# alfa-hackathon

./: .gitignore  Makefile  README.md
src/backend/: .env.app_config.example  .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 6dcaacdf6942_add_user_id_to_chat.py  6f36b06e3cb8_add_chat_and_message.py  b7e1f2a3c4d5_add_knowledge_chunks.py  c1a2b3d4e5f6_add_chat_document_chunks.py  d6c83092771a_table_users.py
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py
src/backend/core/: config.py
src/backend/database/: __init__.py  base.py  db_helper.py
src/backend/database/mixins/: __init__.py  id_int_pk.py
src/backend/evals/: dataset.jsonl  judge.py  runner.py
src/backend/features/: __init__.py
src/backend/features/chats/: __init__.py
src/backend/features/documents/: __init__.py  export.py  ingest.py  pdf.py  schemas.py
src/backend/features/llm/: agent.py  client.py  context_builder.py  guardrails.py  system_prompt.py  tracing.py
src/backend/features/messages/: __init__.py
src/backend/features/rag/: __init__.py  embeddings.py  ingest.py  models.py  retrieval.py
src/backend/features/users/: __init__.py
src/backend/knowledge/: finansy.md  marketing.md  nalogi.md
src/backend/shared/enums/: __init__.py  sender.py
src/backend/tests/: test_agent.py  test_case_converter.py  test_client.py  test_context_builder.py  test_documents.py  test_evals.py  test_guardrails.py  test_pdf.py  test_rag.py  test_tools.py  test_tracing.py
src/backend/utils/: JWT.py  __init__.py
(+71 files in other folders)
