[project]
name = "alfafuture-hack"
version = "0.1.0"
description = "AI assistant that helps small-business owners with financial, document and knowledge tasks via a tool-using agent."
license = { text = "GPL v3" }
readme = "../../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "inflect (>=7.5.0,<8.0.0)",
    "openai (>=2.7.2,<3.0.0)",
    "tiktoken (>=0.8.0,<1.0.0)",
    "pgvector (>=0.3.6,<0.4.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.3.3,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]
